fix(management): alignemnt responsive

--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -192,6 +192,8 @@
 //MEDIA QUERIES
 @media(width < 1025px){
   .credential-management-container {
+    width: 90%;
+
     .title-container{
       display: flex;
       flex-direction: column;
